--- a/staging/schweitzer/SCHW_Prosp1_Anim_300x600/index.html
+++ b/staging/schweitzer/SCHW_Prosp1_Anim_300x600/index.html
@@ -48,6 +48,9 @@
         <div id="logo" class="set">
           <img src="images/logo.png" width="300px" height="600px" alt="" />
         </div>
+        <div id="cta" class="set">
+          <img src="images/cta.png" width="300px" height="600px" alt="" />
+        </div>
         <!-- <div id="dot"></div> -->
       </div>
     </div>
