--- a/staging/schweitzer/index.html
+++ b/staging/schweitzer/index.html
@@ -54,7 +54,6 @@
               <a href="SCHW_Prosp1_Anim_320x50/index.html">320x50</a>
             </li>
           </ul>
-
         </div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center">
@@ -62,9 +61,7 @@
           </p>
           <ul>
             <li>
-              <a href="SCHW_Prosp2_Anim_300x250/index.html"
-                >300x250</a
-              >
+              <a href="SCHW_Prosp2_Anim_300x250/index.html">300x250</a>
             </li>
           </ul>
           <ul>
@@ -81,7 +78,7 @@
             <li>
               <a href="SCHW_Prosp2_Anim_300x600/index.html">300x600</a>
             </li>
-          </ul>    
+          </ul>
           <ul>
             <li>
               <a href="SCHW_Prosp2_Anim_320x50/index.html">320x50</a>
@@ -96,7 +93,7 @@
         <div class="col-lg"></div>
         <div class="col-lg-3 bg-light pt-4">
           <p class="text-center">
-            <strong>Retargeting Concept 1</strong>
+            <strong>Retargeting</strong>
           </p>
           <ul>
             <li>
@@ -110,12 +107,12 @@
           </ul>
           <ul>
             <li>
-              <a href="SCHW_RT1_Anim_160x600/index.html">160x600</a>
+              <a href="SCHW_RT2_Anim_160x600/index.html">160x600</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="SCHW_RT1_Anim_300x600/index.html">300x600</a>
+              <a href="SCHW_RT2_Anim_300x600/index.html">300x600</a>
             </li>
           </ul>
           <ul>
@@ -123,13 +120,12 @@
               <a href="SCHW_RT1_Anim_320x50/index.html">320x50</a>
             </li>
           </ul>
-
         </div>
-        <div class="col-lg-3 bg-light pt-4">
-          <p class="text-center">
+       <div class="col-lg-3 bg-light pt-4">
+           <!-- <p class="text-center">
             <strong>Retargeting Concept 2</strong>
           </p>
-          <!-- <ul>
+           <ul>
             <li>
               <a href="SCHW_RT2_Anim_300x250/index.html"
                 >300x250</a
@@ -140,7 +136,7 @@
             <li>
               <a href="SCHW_RT2_Anim_728x90/index.html">728x90</a>
             </li>
-          </ul> -->
+          </ul> 
           <ul>
             <li>
               <a href="SCHW_RT2_Anim_160x600/index.html">160x600</a>
@@ -151,15 +147,15 @@
               <a href="SCHW_RT2_Anim_300x600/index.html">300x600</a>
             </li>
           </ul>    
-          <!-- <ul>
+          <ul>
             <li>
               <a href="SCHW_RT2_Anim_320x50/index.html">320x50</a>
             </li>
-          </ul> -->
+          </ul>  -->
         </div>
 
-        <div class="col-lg"></div>
-      </div>
+          <div class="col-lg"></div>
+        </div>
         <div class="col-lg"></div>
       </div>
     </div>
