--- a/staging/schweitzer/landing/index.html
+++ b/staging/schweitzer/landing/index.html
@@ -39,7 +39,7 @@
           <div class="bg-light bg-opacity-50 w-25 rounded-3">
             <img src="volume.png" alt="Volume" class="img-fluid" />
             <h6 class="text-center" id="volumeLabel">
-              <strong>Mute</strong>
+              <strong>Unmute</strong>
             </h6>
           </div>
         </div>
